objects/Recruitment_Campaign__c.object
<CustomObject>
    <label>Recruitment CampaignArchived</label>
    <nameField>
        <label>Recruitment Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruitment Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Poste__c</fullName>
        <label>Poste</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seniority__c</fullName>
        <label>Seniority</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recruitment_sites__c</fullName>
        <label>Recruitment sites</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tanit Jobs</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>